--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "ext-intl": "*"
     },
     "require-dev": {
-        "symfony/filesystem": "^6.4|^7.0",
+        "symfony/filesystem": "^7.1",
         "symfony/finder": "^6.4|^7.0",
         "symfony/var-exporter": "^6.4|^7.0"
     },
