--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "autoload": {
         "psr-4": { "Symfony\\Component\\Emoji\\": "" },
         "exclude-from-classmap": [
-            "/Tests/"
+            "/Tests/",
+            "/Resources/data/"
         ]
     },
     "minimum-stability": "dev"
